--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@copilotkit/react-core": "1.8.13",
     "@copilotkit/react-ui": "1.8.13",
+    "@copilotkit/runtime": "^1.10.2",
     "@copilotkit/runtime-client-gql": "1.8.13",
+    "@copilotkit/shared": "^1.10.2",
     "@supabase/supabase-js": "^2.55.0",
     "clsx": "^1.2.1",
     "motion": "^11.18.1",
     "next": "14.2.1",
+    "openai": "^4.104.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.4",
